# Datathon_Analise_Curriculum_Grupo37

./: .gitignore  Dockerfile  README.md  ai.py  analise.py  database.py  docker-compose.yml  download_cv.py  helper.py  main.py  pyproject.toml  requirements.txt  supabase_client.py  tratarbase.py
